@@ -256,6 +256,7 @@ Views 3.x-7.x-dev
     o by dereine: Fix missing files in the info file.
     o #807506 by damZ: Improve the usefulness of ViewsSqlTest.
     o #807510 by damZ: Test sort handler.
+    o by dereine: Move views_test.created field to viewsSqlTest.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
